--- a/modules/DVelum/Articles/resources/css/admin.css
+++ b/modules/DVelum/Articles/resources/css/admin.css
@@ -1,17 +1,24 @@
 .dv_article-wrap{
-    padding:2px;
     border:1px solid #cccccc;
-    height:146px;
-    float:left;
+    height:370px;
     cursor:pointer !important;
-    min-width:400px;
-    width:560px;
-    margin-bottom:6px;
-    float:left;
+    width:300px;
+    margin:4px;
     white-space:normal;
-
+    float:left;
+    background-color: #ffffff;
+    box-shadow:0 0 8px 2px #ccc;
+}
+.dv_article-wrap:hover{
+    border-color:#737373;
+    box-shadow:0 0 8px 3px #ccc;
+    transition:box-shadow 0.6s ease 0s, border-color 0.6s ease 0s;
 }
 
+
+.dv_article-wrap .clear{
+    clear:both;
+}
 .dv_article-wrap .x-view-item-focused{
     background-color: #00a8c6;
 }
@@ -22,8 +29,10 @@
 }
 
 .dv_article-wrap .pic{
-    float:left;
-    padding:3px;
+
+}
+.dv_article-wrap .pic img{
+    width:100%;
 }
 
 .dv_article-wrap .card:hover{
@@ -37,6 +46,8 @@
 
 .dv_article-wrap div.brief{
     margin-top: 5px;
+    overflow: hidden;
+    max-height: 70px;
 }
 
 .dv_article-wrap div.headTools{
@@ -44,12 +55,17 @@
     font-weight: bold;
 }
 
+
 .dv_article-wrap .headTools .versions{
     padding: 2px;
     display: inline-block;
     font-weight: normal;
     border:1px solid #ECEBEA;
 }
+
+
+
+
 
 .dv_article-wrap .headTools .versions.green{
     background-color: #00d95a;
@@ -59,56 +75,48 @@
     background-color: #FFFCC5;
 }
 
-
 .dv_article-wrap div.content{
     min-height: 100px;
+    padding:4px;
 }
-
 
 .dv_article-wrap div.bottomTools{
     height:20px;
-    margin: 0px 50px 5px 0px;
-    float: right;
+    display: inline-block;
+    width: 140px;
+    margin:1px 0 6px 0;
+    text-align: center;
 }
-
 
 div.dv_article-target{
     padding:10px;
 }
 
-.dv_article-wrap div.actionBtn {
-    clear: both;
-    border: 1px solid #cccccc;
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
-    border-radius: 2px;
-    display: inline-block;
-    float: right;
-    font-size: 10px;
-    line-height: 18px;
-    margin: 5px 2px 2px 2px;
-    padding: 3px;
-    padding-left: 8px;
-    padding-right: 8px;
-    text-transform: uppercase;
-    vertical-align: middle;
-    color: #cccccc;
-    cursor: pointer;
+
+.dv_article-wrap .updateInfo{
+    text-align: right;
+    padding:2px;
 }
 
-.dv_article-wrap div.actionBtn:hover {
-    background-color: #ffffff;
-    background-image: linear-gradient(#ffffff, #E4F2F9);
-    -webkit-box-shadow: 0 0 4px #ccc;
-    -moz-box-shadow: 0 0 4px #ccc;
-    box-shadow: 0 0 4px #ccc;
+.dv_article-wrap .updateInfo{
+    position: inherit;
+    text-align: center;
+    bottom:-20px;
+    color:#808080;
+    color:#000000;
+    padding-top:4px;
 }
 
-.dv_article-wrap div.actionBtn img{
-    margin: 0px 5px 0px 0px;
-    vertical-align: middle;
+.dv_article-wrap .author{
+    margin-left:4px;
+    font-weight: bold;
+    font-size: 11px;
 }
-.dv_article-wrap div.actionBtn span.label{
-    vertical-align: middle;
-    color:#000;
+
+.dv_article-wrap .publishDate, .dv_article-wrap .version {
+    margin-left:4px;
+    font-weight: normal;
+    font-size: 11px;
+    color:#808080;
+    color:#000000;
 }
