--- a/modules/DVelum/Articles/resources/css/admin.css
+++ b/modules/DVelum/Articles/resources/css/admin.css
@@ -15,14 +15,12 @@
     transition:box-shadow 0.6s ease 0s, border-color 0.6s ease 0s;
 }
 
-
 .dv_article-wrap .clear{
     clear:both;
 }
 .dv_article-wrap .x-view-item-focused{
     background-color: #00a8c6;
 }
-
 
 .dv_article .infoRow{
     display: inline-block;
@@ -42,30 +40,26 @@
 .dv_article-wrap div.title{
     font-weight: bold;
     font-size: 16px;
+    max-height: 36px;
+    overflow: hidden;
 }
 
 .dv_article-wrap div.brief{
     margin-top: 5px;
     overflow: hidden;
-    max-height: 70px;
+    max-height: 56px;
 }
 
 .dv_article-wrap div.headTools{
-    margin-left:4px;
     font-weight: bold;
 }
 
 
 .dv_article-wrap .headTools .versions{
-    padding: 2px;
     display: inline-block;
     font-weight: normal;
-    border:1px solid #ECEBEA;
+    padding: 0 2px;
 }
-
-
-
-
 
 .dv_article-wrap .headTools .versions.green{
     background-color: #00d95a;
@@ -83,9 +77,11 @@
 .dv_article-wrap div.bottomTools{
     height:20px;
     display: inline-block;
-    width: 140px;
-    margin:1px 0 6px 0;
+    width: 150px;
     text-align: center;
+}
+.dv_article-wrap div.bottomTools div{
+    background-color: transparent !important;
 }
 
 div.dv_article-target{
@@ -102,9 +98,8 @@ div.dv_article-target{
     position: inherit;
     text-align: center;
     bottom:-20px;
-    color:#808080;
     color:#000000;
-    padding-top:4px;
+    padding:4px;
 }
 
 .dv_article-wrap .author{
@@ -117,6 +112,5 @@ div.dv_article-target{
     margin-left:4px;
     font-weight: normal;
     font-size: 11px;
-    color:#808080;
     color:#000000;
 }
