--- a/modules/DVelum/Articles/resources/css/style.css
+++ b/modules/DVelum/Articles/resources/css/style.css
@@ -1,5 +1,7 @@
-.dv_article .pic.article img{width:100%}
-.dv_article .clear{clear:both;}
+div.dv_article{width:100%;}
+.dv_article .pic.article {width:100%;text-align: center;}
+.dv_article .pic.article img{width:100%;max-width: 433px;}
+.dv_article .clear{clear:left;}
 .dv_article .clear.empty{height:10px}
 
 .dv_article .articleBody p{font-size: 18px;  color:#000;}
@@ -26,17 +28,28 @@
     height:370px;
     cursor:pointer !important;
     width:300px;
-    margin:4px;
+    margin:10px 10px 10px 0px;
     white-space:normal;
     float:left;
     background-color: #ffffff;
     box-shadow:0 0 8px 2px #ccc;
 }
-.dv_article .articleCards .item .content{min-height: 100px;  padding:4px;}
+.dv_article .articleCards .item:hover{
+    box-shadow:0 0 8px 2px #B4AF97;
+    transition:box-shadow 0.6s ease 0s, border-color 0.6s ease 0s;
+}
+
+.dv_article .articleCards .item .content{min-height: 100px;  padding:5px; width:290px}
 .dv_article .articleCards .item a{text-decoration: none;}
 .dv_article .articleCards .item a .title:hover {color: #1D5BB2;}
-.dv_article .articleCards .item .pic img{width:100%;  }
-.dv_article .articleCards .item .title{color:#000; font-weight: bold;  font-size: 16px;}
+.dv_article .articleCards .item .pic img{width:100%; }
+.dv_article .articleCards .item .title{color:#000; font-weight: bold;  font-size: 16px; font-family: Arial}
 .dv_article .articleCards .item .brief{margin-top: 5px;  overflow: hidden;  max-height: 86px;}
 .dv_article .articleCards .item .sign{padding:4px 0px 4px;}
-
+/* Article Menu*/
+.dv_article.menu {text-align: left; padding:0px;margin: 0px; padding-bottom: 20px;}
+.dv_article.menu li{list-style: none; float:left; padding: 0px 10px 0px;}
+.dv_article.menu .category{text-decoration: none; color:#000;}
+.dv_article.menu .category.active{font-weight: bold; color:#3b93c0;}
+/* Article*/
+.dv_article article h1{font-size: 22px;}
