--- a/modules/DVelum/Articles/resources/css/style.css
+++ b/modules/DVelum/Articles/resources/css/style.css
@@ -24,18 +24,18 @@ div.dv_article{width:100%;}
 
 /* Article Cards*/
 .dv_article .articleCards .item{
-    border:1px solid #cccccc;
-    height:370px;
+    height:400px;
     cursor:pointer !important;
     width:300px;
     margin:10px 10px 10px 0px;
     white-space:normal;
     float:left;
-    background-color: #ffffff;
-    box-shadow:0 0 8px 2px #ccc;
+    border:1px solid #EBEAE9;
+    background-color: #FAFAFA;
+
 }
 .dv_article .articleCards .item:hover{
-    box-shadow:0 0 8px 2px #B4AF97;
+    box-shadow:0 0 8px 2px #ccc;
     transition:box-shadow 0.6s ease 0s, border-color 0.6s ease 0s;
 }
 
@@ -44,12 +44,13 @@ div.dv_article{width:100%;}
 .dv_article .articleCards .item a .title:hover {color: #1D5BB2;}
 .dv_article .articleCards .item .pic img{width:100%; }
 .dv_article .articleCards .item .title{color:#000; font-weight: bold;  font-size: 16px; font-family: Arial}
-.dv_article .articleCards .item .brief{margin-top: 5px;  overflow: hidden;  max-height: 86px;}
+.dv_article .articleCards .item .brief{margin-top: 5px;  overflow: hidden;  max-height: 126px;}
 .dv_article .articleCards .item .sign{padding:4px 0px 4px;}
 /* Article Menu*/
-.dv_article.menu {text-align: left; padding:0px;margin: 0px; padding-bottom: 20px;}
-.dv_article.menu li{list-style: none; float:left; padding: 0px 10px 0px;}
+.dv_article.menu {text-align: left; padding:0px; margin: 0px; padding-bottom: 20px; width: 100%;}
+.dv_article.menu li{list-style: none; float:left; padding: 15px 10px 0px;}
 .dv_article.menu .category{text-decoration: none; color:#000;}
+.dv_article.menu .category:hover{color:#3b93c0;}
 .dv_article.menu .category.active{font-weight: bold; color:#3b93c0;}
 /* Article*/
 .dv_article article h1{font-size: 22px;}
