--- a/modules/DVelum/Articles/resources/css/style.css
+++ b/modules/DVelum/Articles/resources/css/style.css
@@ -1,51 +1,34 @@
 div.dv_article{width:100%;}
+
 .dv_article .pic.article {width:100%;text-align: center;}
-.dv_article .pic.article img{width:100%;max-width: 690px;}
+.dv_article .pic.article img{width:100%;}
+
 .dv_article .clear{clear:left;}
 .dv_article .clear.empty{height:10px}
-
-.dv_article .articleBody p{font-size: 18px;  color:#000;}
 
 .dv_article  ul.relatedArticles {list-style: none; padding: 0; margin: 0;}
 .dv_article .relatedArticles li {clear: both;padding:4px;}
 .dv_article .relatedArticles li a {text-decoration: none; color:#000000;}
 .dv_article .relatedArticles .title {font-size: 16px;font-weight: bold;}
 .dv_article .relatedArticles a .title:hover {color: #1D5BB2; font-size: 16px;font-weight: bold;}
-
 .dv_article .relatedArticles .brief {font-size: 14px;font-weight: normal;}
-
 .dv_article .relatedArticles .pic{float:left; padding:5px;}
 .dv_article .relatedArticles .pic img{float:left; border:1px solid #ccc;}
 
 .dv_article div.sep{height:5px;border-bottom:1px solid #D5D5D5;clear:both;width:100%;}
-
 .dv_article .date, .dv_article .categoryLink a{color: #959595;  font-size: 12px;  font-weight: normal;  line-height: 20px;  white-space: nowrap; text-decoration: none}
 
-
 /* Article Cards*/
-.dv_article .articleCards .item{
-    height:400px;
-    cursor:pointer !important;
-    width:300px;
-    margin:10px 10px 10px 0px;
-    white-space:normal;
-    float:left;
-    border:1px solid #EBEAE9;
-    background-color: #FAFAFA;
-
-}
-.dv_article .articleCards .item:hover{
-    box-shadow:0 0 8px 2px #ccc;
-    transition:box-shadow 0.6s ease 0s, border-color 0.6s ease 0s;
-}
-
+.dv_article .articleCards .item{  height:400px;  cursor:pointer !important;  width:298px;  margin:10px 10px 10px 0px;  white-space:normal;  float:left;  border:1px solid #EBEAE9;  background-color: #FAFAFA;}
+.dv_article .articleCards .item:hover{  box-shadow:0 0 8px 2px #ccc;  transition:box-shadow 0.6s ease 0s, border-color 0.6s ease 0s; }
 .dv_article .articleCards .item .content{min-height: 100px;  padding:5px; width:290px}
-.dv_article .articleCards .item a{text-decoration: none;}
+.dv_article .articleCards .item a{text-decoration: none; color:#000}
 .dv_article .articleCards .item a .title:hover {color: #1D5BB2;}
 .dv_article .articleCards .item .pic img{width:100%; }
-.dv_article .articleCards .item .title{color:#000; font-weight: bold;  font-size: 16px; font-family: Arial}
-.dv_article .articleCards .item .brief{margin-top: 5px;  overflow: hidden;  max-height: 126px;}
+.dv_article .articleCards .item .title{color:#000; font-weight: bold;  font-size: 16px; font-family: Arial;}
+.dv_article .articleCards .item .brief{margin-top: 5px;  overflow: hidden;  max-height: 106px;}
 .dv_article .articleCards .item .sign{padding:4px 0px 4px;}
+.dv_article .articleCards .item .sign a.category{color:#1D5BB2}
 /* Article Menu*/
 .dv_article.menu {text-align: left; padding:0px; margin: 0px; padding-bottom: 20px; width: 100%;}
 .dv_article.menu li{list-style: none; float:left; padding: 15px 10px 0px;}
@@ -53,4 +36,11 @@ div.dv_article{width:100%;}
 .dv_article.menu .category:hover{color:#3b93c0;}
 .dv_article.menu .category.active{font-weight: bold; color:#3b93c0;}
 /* Article*/
-.dv_article article h1{font-size: 22px;}
+.dv_article .article h1{font-size: 22px;}
+.dv_article .articleBody{ font-size: 16px; font-family: Arial; color:#000;}
+/* Article Block*/
+.dv_article.block.article .item .pic img{width:110px; float: left;padding: 1px;box-shadow: 0 0 2px 0 #000;margin: 4px 10px 4px 0;}
+.dv_article.block.article  a{font-size: 12px; font-weight: bold; text-decoration: none; color:#000;}
+.dv_article.block.article  a:hover{color:#3b93c0;}
+.dv_article.block.article .item .date{color: #959595;  font-size: 12px;  font-weight: normal;  line-height: 20px;  margin: 0;  padding: 0;  white-space: nowrap;  }
+.dv_article.block.article .showMore{float: right; font-weight: normal;}
