Password recovery module. v 1.0

--- a/modules/DVelum/PasswordRecovery/resources/css/recovery.css
+++ b/modules/DVelum/PasswordRecovery/resources/css/recovery.css
@@ -7158,3 +7158,8 @@ td.visible-print {
     margin-right: 10px;
     line-height: 1
 }
+
+.form-wrapper {
+    margin: 10px auto;
+    width: 400px
+}
